--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -8653,6 +8653,271 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>name</th>\n",
+       "      <th>profession</th>\n",
+       "      <th>talent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bomm</td>\n",
+       "      <td>xeno-scholar</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Anastas</td>\n",
+       "      <td>xeno-scholar</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zemo</td>\n",
+       "      <td>alchemist</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Boomi</td>\n",
+       "      <td>alchemist</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alistair</td>\n",
+       "      <td>cook</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Xina</td>\n",
+       "      <td>cook</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  group      name    profession   talent\n",
+       "2   3      1      Bomm  xeno-scholar  warrior\n",
+       "5   6      2   Anastas  xeno-scholar     mage\n",
+       "1   2      1      Zemo     alchemist  warrior\n",
+       "4   5      2     Boomi     alchemist     mage\n",
+       "0   1      1  Alistair          cook  warrior\n",
+       "3   4      2      Xina          cook     mage"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Custom sort based on one column.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'id': [1, 2, 3, 4, 5, 6],\n",
+    "    'group': [1, 1, 1, 2, 2, 2],\n",
+    "    'name': ['Alistair', 'Zemo', 'Bomm', 'Xina', 'Boomi', 'Anastas'],\n",
+    "    'profession': ['cook', 'alchemist', 'xeno-scholar', 'cook', 'alchemist', 'xeno-scholar'],\n",
+    "    'talent': ['warrior', 'warrior', 'warrior', 'mage', 'mage', 'mage']\n",
+    "})\n",
+    "custom_order_profession = ['xeno-scholar', 'alchemist', 'cook']\n",
+    "custom_order_profession_map = {item: idx for idx, item in enumerate(custom_order_profession)}\n",
+    "(\n",
+    "    df\n",
+    "    .sort_values(\n",
+    "        by =        ['profession', 'talent', 'group'],\n",
+    "        ascending = [ True,         False,     True],\n",
+    "        key = lambda col: col.map(custom_order_profession_map) if col.name == 'profession' else col\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>name</th>\n",
+       "      <th>profession</th>\n",
+       "      <th>talent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Anastas</td>\n",
+       "      <td>xeno-scholar</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bomm</td>\n",
+       "      <td>xeno-scholar</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Boomi</td>\n",
+       "      <td>alchemist</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zemo</td>\n",
+       "      <td>alchemist</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Xina</td>\n",
+       "      <td>cook</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alistair</td>\n",
+       "      <td>cook</td>\n",
+       "      <td>warrior</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  group      name    profession   talent\n",
+       "5   6      2   Anastas  xeno-scholar     mage\n",
+       "2   3      1      Bomm  xeno-scholar  warrior\n",
+       "4   5      2     Boomi     alchemist     mage\n",
+       "1   2      1      Zemo     alchemist  warrior\n",
+       "3   4      2      Xina          cook     mage\n",
+       "0   1      1  Alistair          cook  warrior"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Custom sort based on two columns.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'id': [1, 2, 3, 4, 5, 6],\n",
+    "    'group': [1, 1, 1, 2, 2, 2],\n",
+    "    'name': ['Alistair', 'Zemo', 'Bomm', 'Xina', 'Boomi', 'Anastas'],\n",
+    "    'profession': ['cook', 'alchemist', 'xeno-scholar', 'cook', 'alchemist', 'xeno-scholar'],\n",
+    "    'talent': ['warrior', 'warrior', 'warrior', 'mage', 'mage', 'mage']\n",
+    "})\n",
+    "custom_order_profession = ['xeno-scholar', 'alchemist', 'cook']\n",
+    "custom_order_profession_map = {item: idx for idx, item in enumerate(custom_order_profession)}\n",
+    "custom_order_talent = ['mage', 'warrior']\n",
+    "custom_order_talent_map = {item: idx for idx, item in enumerate(custom_order_talent)}\n",
+    "(\n",
+    "    df\n",
+    "    .sort_values(\n",
+    "        by =        ['profession', 'talent', 'group'],\n",
+    "        ascending = [ True,         True,     True],\n",
+    "        key = lambda col: (\n",
+    "            col.map(custom_order_profession_map) if col.name == 'profession'\n",
+    "            else col.map(custom_order_talent_map) if col.name == 'talent'\n",
+    "            else col\n",
+    "        )\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sample\n",
     "\n",
     "```py\n",
@@ -24771,7 +25036,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -24785,7 +25050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   },
   "orig_nbformat": 4
  },
