--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -1386,6 +1386,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8727,6 +8736,7 @@
     "## Precision\n",
     "\n",
     "**Precision**, *точность*: \n",
+    "- a.k.a. positive predictive value\n",
     "- Shows accuracy of the positive predictions. \n",
     "- Out of data points classified as positive (1 label), how many are actually positive? \n",
     "- When your model guesses, how often does it guess correctly?\n",
@@ -9198,7 +9208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -9212,7 +9222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
