--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -16894,7 +16894,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -16908,7 +16908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
