--- a/models_from_scratch/hmm_1_classifyd/main2.ipynb
+++ b/models_from_scratch/hmm_1_classifyd/main2.ipynb
@@ -9,8 +9,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "596f5e79",
+   "metadata": {},
+   "source": [
+    "Binary classification:\n",
+    "- `0`: Edgar Allan Poe\n",
+    "- `1`: Robert Frost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "386469ae",
    "metadata": {},
    "outputs": [],
@@ -19,6 +29,7 @@
     "import re\n",
     "import math\n",
     "\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -148,11 +159,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc134fc1",
+   "id": "72ef03a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1"
+    "# Let's split into sentences and count\n",
+    "c1_1_sentences = [i.strip() for i in c1_1.split('.')]\n",
+    "print(len(c1_1_sentences))\n",
+    "print(c1_1_sentences[:3])\n",
+    "\n",
+    "c1_1_train, c1_1_test = train_test_split(\n",
+    "    c1_1_sentences,\n",
+    "    test_size = 0.15,\n",
+    "    random_state = 32\n",
+    ")\n",
+    "print(len(c1_1_train), len(c1_1_test))\n",
+    "\n",
+    "c1_1_train = ' . '.join(c1_1_train)\n",
+    "c1_1_train"
    ]
   },
   {
@@ -173,7 +197,7 @@
     "with open('robert_frost.txt', 'r') as f:\n",
     "    c2_0 = f.readlines()\n",
     "\n",
-    "c2_0"
+    "c2_0[:3]"
    ]
   },
   {
@@ -190,11 +214,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5aa347ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's split into sentences and count\n",
+    "c2_1_sentences = [i.strip() for i in c2_1.split('.')]\n",
+    "print(len(c2_1_sentences))\n",
+    "print(c2_1_sentences[:3])\n",
+    "\n",
+    "c2_1_train, c2_1_test = train_test_split(\n",
+    "    c2_1_sentences,\n",
+    "    test_size = 0.05,\n",
+    "    random_state = 32\n",
+    ")\n",
+    "print(len(c2_1_train), len(c2_1_test))\n",
+    "\n",
+    "c2_1_train = ' . '.join(c2_1_train)\n",
+    "c2_1_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d62c94e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54d9d7e",
+   "metadata": {},
+   "source": [
+    "## Test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad341d38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test = c1_1_test + c2_1_test\n",
+    "print(len(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaad7753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = [0 for _ in range(len(c1_1_test))] + [1 for _ in range(len(c2_1_test))]\n",
+    "print(len(y_test))\n",
+    "y_test[:5]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d4841a",
+   "metadata": {},
+   "source": [
+    "## Combined vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "83969ac8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab = c1_1 + ' ' + c2_1\n",
+    "vocab = c1_1_train + ' ' + c2_1_train\n",
     "vocab = list(set(vocab.split(' ')))\n",
     "vocab"
    ]
@@ -226,7 +318,7 @@
     "                      ) -> dict:\n",
     "    return set(txt.split(' '))\n",
     "\n",
-    "get_unique_tokens(c1_1)"
+    "get_unique_tokens(c1_1_train)"
    ]
   },
   {
@@ -262,28 +354,22 @@
     "        dict_start[i] = math.log(dict_start[i], 10)\n",
     "    # Sort the dictionary based on value\n",
     "    dict_start = dict(sorted(dict_start.items(), key = lambda item: item[1], reverse = True))\n",
+    "    # Add out-of-vocabulary (OOV) token\n",
+    "    dict_start['OOV'] = min(dict_start.values())\n",
     "    return dict_start\n",
     "\n",
-    "c1_isd = return_dict_ISD(c1_1)\n",
+    "c1_isd = return_dict_ISD(c1_1_train)\n",
     "c1_isd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d1f5c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c53be3d",
+   "id": "76ef7800",
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1_isd['writer']"
+    "c1_isd['OOV']"
    ]
   },
   {
@@ -293,8 +379,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2_isd = return_dict_ISD(c2_1)\n",
+    "c2_isd = return_dict_ISD(c2_1_train)\n",
     "c2_isd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3f9e6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c2_isd['OOV']"
    ]
   },
   {
@@ -305,8 +401,9 @@
    "outputs": [],
    "source": [
     "for i in (c1_isd, c2_isd):\n",
-    "    print(min(i.values()), max(i.values()))\n",
-    "\n"
+    "    assert 'OOV' in i, \"ERROR: OOV token not present.\"\n",
+    "    assert min(i.values()) < 0, \"ERROR\"\n",
+    "    assert max(i.values()) < 0, \"ERROR\"\n"
    ]
   },
   {
@@ -334,7 +431,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1_1.split(' ')"
+    "c1_1_train.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "773ac9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int(100)\n",
+    "a"
    ]
   },
   {
@@ -355,13 +463,21 @@
     "    # count dict\n",
     "    dict_counts = {i: train_corpus.count(i) + len(set(train_corpus)) for i in vocab}\n",
     "    # Divide by counts\n",
+    "    min_value = int(100)\n",
     "    for i in dict_counts:\n",
     "        subdict = dict_stt[i]\n",
     "        subdict = {j: math.log(subdict[j] / dict_counts[i], 10) for j in subdict}\n",
     "        dict_stt[i] = subdict\n",
+    "        # Get smallest value for OOV\n",
+    "        min_value = min(\n",
+    "            min_value,\n",
+    "            min(subdict.values())\n",
+    "        )\n",
+    "    # Add OOV\n",
+    "    dict_stt['OOV'] = min_value\n",
     "    return dict_stt\n",
     "\n",
-    "c1_stt = create_dict_STT(c1_1)\n",
+    "c1_stt = create_dict_STT(c1_1_train)\n",
     "c1_stt"
    ]
   },
@@ -382,9 +498,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2_stt = create_dict_STT(c2_1)\n",
-    "for i in ['throve', 'sake', 'of']:\n",
-    "    print(c2_stt['writer'][i])\n"
+    "c2_stt = create_dict_STT(c2_1_train)\n",
+    "\n"
    ]
   },
   {
@@ -394,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2_stt['writer']['of']"
+    "# c2_stt['writer']['of']"
    ]
   },
   {
@@ -404,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2_1.split(' ').count('writer')"
+    "c2_1_train.split(' ').count('writer')"
    ]
   },
   {
@@ -418,6 +533,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2adfb6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in (c1_stt, c2_stt):\n",
+    "    assert 'OOV' in i, \"ERROR: OOV not present.\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "191b4efe",
    "metadata": {},
@@ -426,52 +552,179 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2911a53",
+   "cell_type": "markdown",
+   "id": "d746246a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "snt1 = ['Not long ago, the writer of these lines, In the mad pride of intellectuality.']\n",
-    "\n",
-    "snt1_proc = process_txt(snt1).split(' ')\n",
-    "snt1_proc\n"
+    "## Classify one"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13df8013",
+   "id": "132d12ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "proba_c1 = 0\n",
-    "\n",
-    "proba_c1 += c1_isd[snt1_proc[0]]\n",
-    "for i in range(1, len(snt1_proc) - 1):\n",
-    "    word, next_word = snt1_proc[i], snt1_proc[i+1]\n",
-    "    proba = c1_stt[word][next_word]\n",
-    "    proba_c1 += proba\n",
-    "    print(proba, word, next_word)\n",
-    "proba_c1"
+    "c1_stt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda97daa",
+   "id": "05f525c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "proba_c2 = 0\n",
+    "a = 1\n",
+    "b = 32\n",
+    "c = 5 if a == 1 else 50\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748fd3bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {\n",
+    "    'a': {\n",
+    "        'a': 5,\n",
+    "        'b': 10\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "proba_c2 += c2_isd[snt1_proc[0]]\n",
-    "for i in range(1, len(snt1_proc) - 1):\n",
-    "    word, next_word = snt1_proc[i], snt1_proc[i+1]\n",
-    "    proba = c2_stt[word][next_word]\n",
-    "    proba_c2 += proba\n",
-    "    print(proba, word, next_word)\n",
-    "proba_c2\n"
+    "True if 'c' in a and 'b' in a['c'] else False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8ba47fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_class(sentence: str,\n",
+    "                  verbose: bool = True\n",
+    "                  ):\n",
+    "    \"\"\"\n",
+    "    Returns boolean prediction:\n",
+    "    - `0`: Edgar Allan Poe\n",
+    "    - `1`: Robert Frost\n",
+    "    \"\"\"\n",
+    "    snt_proc = process_txt([sentence]).split(' ')\n",
+    "\n",
+    "    probabilities = list()\n",
+    "\n",
+    "    # Calculate probability of class 0\n",
+    "    proba_c0 = 0\n",
+    "    # first word\n",
+    "    first_word = snt_proc[0] if snt_proc[0] in c1_isd else 'OOV'\n",
+    "    proba_c0 += c1_isd[first_word]\n",
+    "    # all subsequent words\n",
+    "    for i in range(1, len(snt_proc) - 1):\n",
+    "        word, next_word = snt_proc[i], snt_proc[i+1]\n",
+    "        try:\n",
+    "            proba = c1_stt[word][next_word]\n",
+    "        except KeyError as e:\n",
+    "            print(f\"{word} or {next_word} not present in vocab.\")\n",
+    "            proba = c1_stt['OOV']\n",
+    "        proba_c0 += proba\n",
+    "    probabilities.append(proba_c0)\n",
+    "\n",
+    "    # Calculate probability of class 1\n",
+    "    proba_c1 = 0\n",
+    "    # first word\n",
+    "    first_word = snt_proc[0] if snt_proc[0] in c2_isd else 'OOV'\n",
+    "    proba_c1 += c2_isd[first_word]\n",
+    "    for i in range(1, len(snt_proc) - 1):\n",
+    "        word, next_word = snt_proc[i], snt_proc[i+1]\n",
+    "        try:\n",
+    "            proba = c2_stt[word][next_word]\n",
+    "        except KeyError as e:\n",
+    "            print(f\"{word} or {next_word} not present in vocab.\")\n",
+    "            proba = c2_stt['OOV']\n",
+    "        proba_c1 += proba\n",
+    "    probabilities.append(proba_c1)\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(\"Log probabilities of each class:\")\n",
+    "        print(f\" - `0`: {proba_c0}\")\n",
+    "        print(f\" - `1`: {proba_c1}\")\n",
+    "    return int(np.argmax(probabilities))\n",
+    "\n",
+    "\n",
+    "snt1 = 'Not long ago, the writer of these lines, In the mad pride of intellectuality oceane.'\n",
+    "predict_class(snt1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65109068",
+   "metadata": {},
+   "source": [
+    "## Test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc1a94dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = []\n",
+    "for i in x_test:\n",
+    "    predictions.append(predict_class(i))\n",
+    "\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5c8e2a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score\n",
+    ")\n",
+    "\n",
+    "accuracy_score(\n",
+    "    y_test,\n",
+    "    predictions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9ac883",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision_score(\n",
+    "    y_test,\n",
+    "    predictions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aadcfc0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall_score(\n",
+    "    y_test,\n",
+    "    predictions\n",
+    ")"
    ]
   }
  ],
