--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -9134,6 +9134,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Replace column1 based on other columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column1</th>\n",
+       "      <th>column2</th>\n",
+       "      <th>column3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REPLACED!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Jack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Jill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b</td>\n",
+       "      <td>5</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>a</td>\n",
+       "      <td>6</td>\n",
+       "      <td>REPLACED!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  column1  column2    column3\n",
+       "0       a        1  REPLACED!\n",
+       "1       a        2       None\n",
+       "2       b        3       Jack\n",
+       "3       b        4       Jill\n",
+       "4       b        5       John\n",
+       "5       a        6  REPLACED!"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'column1': ['a', 'a', 'b', 'b', 'b', 'a'],\n",
+    "    'column2': [1, 2, 3, 4, 5, 6],\n",
+    "    'column3': ['John', None, 'Jack', 'Jill', 'John', 'John']\n",
+    "})\n",
+    "df.loc[\n",
+    "    (df['column1'] == 'a') \n",
+    "    & (df['column3'] == 'John'),\n",
+    "    'column3'\n",
+    "] = 'REPLACED!'\n",
+    "df"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
