--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -10871,7 +10871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10910,8 +10910,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>b</td>\n",
-       "      <td>b</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -10944,14 +10944,14 @@
       "text/plain": [
        "   col1  col2 coalesced_col2-col1\n",
        "0   1.0  None                 1.0\n",
-       "1   2.0     b                   b\n",
+       "1   2.0  None                 2.0\n",
        "2   3.0     c                   c\n",
        "3   NaN     d                   d\n",
        "4   5.0     e                   e\n",
        "5   NaN     f                   f"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16634,7 +16634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Melt"
+    "## Melt (unpivot)"
    ]
   },
   {
