--- a/models_from_scratch/hmm_1_classifyd/main.ipynb
+++ b/models_from_scratch/hmm_1_classifyd/main.ipynb
@@ -477,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "handbook-data-science-py3.12",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -491,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
