--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -9137,6 +9137,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## REGEX for column values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hello this is a vegan product.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nothing is present here.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>this product is plant-based and is healthy for...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         description\n",
+       "0                     hello this is a vegan product.\n",
+       "1                                                   \n",
+       "2                           nothing is present here.\n",
+       "3  this product is plant-based and is healthy for..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'description': [\n",
+    "        'hello this is a vegan product.', \n",
+    "        '', \n",
+    "        'nothing is present here.',\n",
+    "        'this product is plant-based and is healthy for you.'\n",
+    "    ] \n",
+    "})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>regex_extract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hello this is a vegan product.</td>\n",
+       "      <td>this is a vegan product.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nothing is present here.</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>this product is plant-based and is healthy for...</td>\n",
+       "      <td>this product is plant-based and is healthy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         description  \\\n",
+       "0                     hello this is a vegan product.   \n",
+       "1                                                      \n",
+       "2                           nothing is present here.   \n",
+       "3  this product is plant-based and is healthy for...   \n",
+       "\n",
+       "                                regex_extract  \n",
+       "0                    this is a vegan product.  \n",
+       "1                                              \n",
+       "2                                              \n",
+       "3  this product is plant-based and is healthy  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def regex_extract(x):\n",
+    "    return ', '.join(\n",
+    "        re.findall(\n",
+    "            r'((?:[^ ]+ ){0,3}(?:plant.based|vegan)(?: [^ ]+){0,3})',\n",
+    "            x\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "df['regex_extract'] = df['description'].apply(lambda x: regex_extract(x))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Replace column1 based on other columns"
    ]
   },
@@ -25146,7 +25319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -25160,7 +25333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
