--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -25319,7 +25319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -25333,7 +25333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   },
   "orig_nbformat": 4
  },
