--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -1302,9 +1302,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TF-IDF matrix: \n",
+      "[[0.49681612 0.61366674 0.61366674]\n",
+      " [1.         0.         0.        ]\n",
+      " [0.         0.         0.        ]\n",
+      " [0.49681612 0.61366674 0.61366674]]\n",
+      "Vocabulary:\n",
+      "['document' 'first' 'first document']\n",
+      "Word-to-index mapping:\n",
+      "{'first': 1, 'document': 0, 'first document': 2}\n",
+      "\n",
+      "TF-IDF matrix:\n",
+      "[[0.49681612 0.61366674 0.61366674]\n",
+      " [1.         0.         0.        ]\n",
+      " [0.         0.         0.        ]\n",
+      " [0.49681612 0.61366674 0.61366674]]\n",
+      "\n",
+      "Vocabulary:\n",
+      "['document' 'first' 'first document']\n",
+      "\n",
+      "Test:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import nltk\n",
@@ -1368,6 +1407,17 @@
     "\n",
     "print(\"Test:\")\n",
     "Xtest.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "newsgroups = fetch_20newsgroups(subset = 'train')\n",
+    "newsgroups"
    ]
   },
   {
