--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -8433,6 +8433,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group</th>\n",
+       "      <th>value</th>\n",
+       "      <th>value_tminus3</th>\n",
+       "      <th>YoY_growth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>210</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>250</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1550</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>1150.0</td>\n",
+       "      <td>0.391304</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   group  value  value_tminus3  YoY_growth\n",
+       "0      1    100            NaN         NaN\n",
+       "1      1    150            NaN         NaN\n",
+       "2      1    200            NaN         NaN\n",
+       "3      1    210          100.0    1.100000\n",
+       "4      1    250          150.0    0.666667\n",
+       "5      2   1000            NaN         NaN\n",
+       "6      2   1150            NaN         NaN\n",
+       "7      2   1300            NaN         NaN\n",
+       "8      2   1550         1000.0    0.550000\n",
+       "9      2   1600         1150.0    0.391304"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'group': [1, 1, 1, 1, 1, 2, 2, 2, 2, 2],\n",
+    "    'value': [100, 150, 200, 210, 250, 1000, 1150, 1300, 1550, 1600]\n",
+    "})\n",
+    "df['value_tminus3'] = df.groupby(['group'])['value'].shift(3)\n",
+    "df['YoY_growth'] = (df['value'] / df['value_tminus3']) - 1\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25319,7 +25457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -25333,7 +25471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
